--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -51,11 +51,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="180" id="53G-XA-fMO" userLabel="tweetCell" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="180"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="150" id="53G-XA-fMO" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="53G-XA-fMO" id="QZj-vh-PzN">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="180"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kKi-sM-Wx9" userLabel="Profile Image View">
@@ -75,58 +75,66 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="81g-G4-ngd" userLabel="Tweet Cell">
-                                            <rect key="frame" x="90" y="41" width="269" height="100"/>
+                                            <rect key="frame" x="90" y="41" width="275" height="70"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="100" id="mRQ-dw-4nX"/>
+                                                <constraint firstAttribute="height" constant="70" id="sNX-KV-Dd2"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Raf-t7-2D4" userLabel="favButton">
-                                            <rect key="frame" x="329" y="139" width="30" height="30"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Raf-t7-2D4" userLabel="favButton">
+                                            <rect key="frame" x="329" y="109" width="30" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="EKC-Br-E4i"/>
                                                 <constraint firstAttribute="width" constant="30" id="Ywh-l2-SEy"/>
                                             </constraints>
-                                            <state key="normal" image="favor-icon"/>
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <state key="normal" image="favor-icon">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </state>
                                             <connections>
-                                                <action selector="favoriteTweet:" destination="53G-XA-fMO" eventType="touchUpInside" id="Xae-HK-d0O"/>
+                                                <action selector="favoriteTweet:" destination="53G-XA-fMO" eventType="touchUpInside" id="cPB-Q7-wm3"/>
                                             </connections>
                                         </button>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N8e-yz-Go8" userLabel="retweetButton">
-                                            <rect key="frame" x="289" y="139" width="30" height="30"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N8e-yz-Go8" userLabel="retweetButton">
+                                            <rect key="frame" x="289" y="109" width="30" height="30"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="SO7-rj-jFS"/>
                                                 <constraint firstAttribute="width" constant="30" id="dDY-JJ-01w"/>
                                             </constraints>
-                                            <state key="normal" image="retweet-icon"/>
+                                            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <state key="normal" image="retweet-icon">
+                                                <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </state>
                                             <connections>
-                                                <action selector="retweet:" destination="53G-XA-fMO" eventType="touchUpInside" id="Ofv-l2-1CN"/>
+                                                <action selector="retweet:" destination="53G-XA-fMO" eventType="touchUpInside" id="6E1-2f-iuC"/>
                                             </connections>
                                         </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="kKi-sM-Wx9" firstAttribute="leading" secondItem="QZj-vh-PzN" secondAttribute="leading" id="0yq-d0-6PD"/>
                                         <constraint firstItem="1W3-gn-ct4" firstAttribute="top" secondItem="QZj-vh-PzN" secondAttribute="topMargin" id="2IE-5x-ggw"/>
+                                        <constraint firstItem="81g-G4-ngd" firstAttribute="top" secondItem="1W3-gn-ct4" secondAttribute="bottom" constant="10" id="4Ec-rb-BFv"/>
                                         <constraint firstItem="1W3-gn-ct4" firstAttribute="leading" secondItem="kKi-sM-Wx9" secondAttribute="trailing" constant="10" id="9II-gP-5Pq"/>
                                         <constraint firstItem="N8e-yz-Go8" firstAttribute="bottom" secondItem="QZj-vh-PzN" secondAttribute="bottomMargin" id="GdZ-BS-ako"/>
                                         <constraint firstItem="Raf-t7-2D4" firstAttribute="trailing" secondItem="QZj-vh-PzN" secondAttribute="trailingMargin" id="NKi-AQ-BwI"/>
-                                        <constraint firstItem="81g-G4-ngd" firstAttribute="trailing" secondItem="QZj-vh-PzN" secondAttribute="trailingMargin" id="NRr-Y5-Kpp"/>
+                                        <constraint firstAttribute="trailing" secondItem="81g-G4-ngd" secondAttribute="trailing" constant="10" id="PLe-jF-u0Q"/>
                                         <constraint firstItem="Raf-t7-2D4" firstAttribute="bottom" secondItem="QZj-vh-PzN" secondAttribute="bottomMargin" id="Sru-B8-ddx"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="1W3-gn-ct4" secondAttribute="trailing" id="Ujh-zX-bJo"/>
                                         <constraint firstItem="kKi-sM-Wx9" firstAttribute="top" secondItem="QZj-vh-PzN" secondAttribute="top" id="Va4-On-vaX"/>
                                         <constraint firstItem="Raf-t7-2D4" firstAttribute="leading" secondItem="N8e-yz-Go8" secondAttribute="trailing" constant="10" id="clD-jx-hJT"/>
-                                        <constraint firstItem="81g-G4-ngd" firstAttribute="leading" secondItem="kKi-sM-Wx9" secondAttribute="trailing" constant="10" id="ddj-Vt-REJ"/>
-                                        <constraint firstItem="81g-G4-ngd" firstAttribute="top" secondItem="1W3-gn-ct4" secondAttribute="bottom" constant="10" id="yAy-yb-f43"/>
+                                        <constraint firstItem="81g-G4-ngd" firstAttribute="leading" secondItem="kKi-sM-Wx9" secondAttribute="trailing" constant="10" id="iGA-il-yRp"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="favButton" destination="Raf-t7-2D4" id="i9K-PD-VXw"/>
-                                    <outlet property="profileImageView" destination="kKi-sM-Wx9" id="off-PV-wXH"/>
-                                    <outlet property="retweetButton" destination="N8e-yz-Go8" id="qiA-cQ-iFs"/>
-                                    <outlet property="tweetCell" destination="81g-G4-ngd" id="WFB-wh-hKS"/>
-                                    <outlet property="userNameLabel" destination="1W3-gn-ct4" id="knh-yV-Yk5"/>
+                                    <outlet property="favButton" destination="Raf-t7-2D4" id="guN-DJ-ljg"/>
+                                    <outlet property="profileImageView" destination="kKi-sM-Wx9" id="X8p-2l-Txd"/>
+                                    <outlet property="retweetButton" destination="N8e-yz-Go8" id="WOz-F1-dfE"/>
+                                    <outlet property="tweetCell" destination="81g-G4-ngd" id="yx1-wk-Lt7"/>
+                                    <outlet property="userNameLabel" destination="1W3-gn-ct4" id="C5D-XS-CHA"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
